--- a/index.html
+++ b/index.html
@@ -1,73 +1,103 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Verificação Divertida</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0f0f0;
-  }
-  .container {
-    background: #fff;
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    text-align: center;
-  }
-  input {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    margin-top: 10px;
-    text-transform: uppercase;
-  }
-  button {
-    padding: 10px 20px;
-    margin-top: 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 6px;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #45a049;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Boa Noite, Meu Anjo!</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(to bottom, #4e73df, #1c1c1c);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+    }
+    .container {
+      text-align: center;
+      padding: 20px;
+      border-radius: 15px;
+      background: rgba(0, 0, 0, 0.6);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      position: relative;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    .heart {
+      font-size: 3rem;
+      color: #ff69b4;
+      animation: heartAnimation 1s infinite;
+    }
+    @keyframes heartAnimation {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+    }
+    .stars {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: -1;
+    }
+    .star {
+      position: absolute;
+      background-color: white;
+      border-radius: 50%;
+      animation: twinkle 1.5s infinite alternate;
+    }
+    @keyframes twinkle {
+      0% { opacity: 0.5; }
+      100% { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
 
 <div class="container">
-  <h2>O que você é?</h2>
-  <input type="text" id="resposta" placeholder="Digite aqui...">
-  <br>
-  <button onclick="verificar()">Enviar</button>
-  <p id="mensagem" style="margin-top:15px; font-weight:bold;"></p>
+  <h1>Boa Noite, Meu Anjo!</h1>
+  <p>Que seus sonhos sejam doces e iluminados. Durma bem e acorde com um sorriso no rosto! 😴✨</p>
+  <span class="heart">💖</span>
 </div>
 
-<script>
-function verificar() {
-  const input = document.getElementById('resposta');
-  const resposta = input.value.trim().toLowerCase();
-  const mensagem = document.getElementById('mensagem');
+<div class="stars"></div>
 
-  if (resposta === "putinha") {
-    mensagem.style.color = "green";
-    mensagem.textContent = "🎉 Liberado! Você escreveu corretamente!";
-    input.value = "NÃO DEMOROU MUITO, NE SUA PUTINHA";
-    input.disabled = true; // Desativa o campo para não alterar mais
-  } else {
-    mensagem.style.color = "red";
-    mensagem.textContent = "❌ Errado! Tente novamente.";
+<script>
+  // Função para criar estrelas animadas
+  function createStars() {
+    const starsContainer = document.querySelector('.stars');
+    for (let i = 0; i < 50; i++) {
+      const star = document.createElement('div');
+      star.classList.add('star');
+      const size = Math.random() * 3 + 1;
+      const left = Math.random() * 100;
+      const top = Math.random() * 100;
+      const animationDuration = Math.random() * 2 + 1;
+      const animationDelay = Math.random() * 2;
+
+      star.style.width = `${size}px`;
+      star.style.height = `${size}px`;
+      star.style.left = `${left}%`;
+      star.style.top = `${top}%`;
+      star.style.animationDuration = `${animationDuration}s`;
+      star.style.animationDelay = `${animationDelay}s`;
+
+      starsContainer.appendChild(star);
+    }
   }
-}
+
+  // Chama a função para criar as estrelas
+  createStars();
 </script>
 
 </body>
